Fix a bleed into button

--- a/web/app/scss/default.scss
+++ b/web/app/scss/default.scss
@@ -45,7 +45,7 @@ header[role=banner] {
     padding: 1rem 0;
     width: 90%;
 
-    a {
+    > a {
         display: inline-block;
         font-size: 1.25rem;
         font-weight: 400;
